parslers-benchmark/src/tests/invalid/semanticErr/expressions/boolOpTypeErr.wacc
# expresission type mismatch int->bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = 1 || 1
end
